@@ -100,3 +100,13 @@ NOTE: These entries may not contain every single minor change but should contain
 
 	header file changes
 		* include/vgcp.h: created the position list structure, updated prototypes 
+
+2021-02-17	version 00-0009
+	Implemented En Passant.
+
+	source file changes
+		* src/move.c: created new functions for en passant (enPassant, addPotentialEnPassant)
+		* src/piece.c (mapPawnPotentialMoves): now checks if en passant is a potential move and adds it if it is
+
+	header file changes
+		* include/vgcp: added "potentialEnPassant" to the tileState enum, updated prototypes 
